# ayumi

./: CMakeLists.txt
src/: ayumi.c  ayumi.h  ayumi_render.c  load_text.c
tools/: psg_to_text.py
